--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SearchSongActivity"></activity>
+        <activity
+            android:name=".SongActivity"
+            android:label="@string/title_activity_song"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".SearchSongActivity" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".LoginActivity">
             <intent-filter>
