--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,14 +30,16 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 
-    implementation"com.squareup.okhttp3:okhttp:4.0.1"
     implementation 'com.github.barteksc:android-pdf-viewer:3.1.0-beta.1'
     implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
     // FirebaseUI for Firebase Realtime Database
     implementation 'com.firebaseui:firebase-ui-database:6.0.2'
+    implementation 'com.google.firebase:firebase-storage:19.1.0'
+    implementation 'com.google.firebase:firebase-auth:19.1.0'
     compile files('libs/activation.jar')
     compile files('libs/additional.jar')
     compile files('libs/mail.jar')
+    implementation 'com.google.android.gms:play-services:7.5.0'
 }
