--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,14 @@
     package="com.example.song_chords">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+
     <uses-feature
-        android:name="android.hardware.Camera2"
+        android:name="android.hardware.camera"
         android:required="true" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -14,7 +19,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".VideoPlayActivity"></activity>
+        <activity android:name=".UserVideo"></activity>
+        <activity android:name=".UserAudio" />
+        <activity android:name=".MenuActivity" />
         <activity
             android:name=".SongActivity"
             android:label="@string/title_activity_song"
