--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".UploadSongActivity"></activity>
+        <activity android:name=".UploadSongActivity" />
         <activity android:name=".VideoActivity" />
         <activity android:name=".UserVideo" />
         <activity android:name=".UserAudio" />
