--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-android'
 apply plugin: 'com.google.gms.google-services'
 
 android {
@@ -48,4 +50,15 @@ dependencies {
     compile files('libs/mail.jar')
     implementation 'com.google.android.gms:play-services:7.5.0'
     implementation 'com.itextpdf:itextg:5.5.10'
+    compile "androidx.core:core-ktx:+"
+
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation "io.reactivex.rxjava2:rxjava:2.2.10"
+    implementation "io.reactivex.rxjava2:rxkotlin:2.3.0"
+
+    implementation 'org.xutils:xutils:3.5.1'
+}
+repositories {
+    mavenCentral()
 }
